objects/ASI_CRM_JP_Field_Privilege__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ASI_CRM_JP_Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_IsObjectField__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isObjectField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Other_Criteria__c</fullName>
        <label>Other Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Page_Name__c</fullName>
        <label>Page Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Privilege__c</fullName>
        <inlineHelpText>Value:
No Access
Read Only
Null Value
Full Access</inlineHelpText>
        <label>Privilege</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Record_Type_Name__c</fullName>
        <inlineHelpText>Leave value blank to allow all record type</inlineHelpText>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>ASI CRM JP Field Privilege</label>
</CustomObject>